Patient_State/main/default/objects/Patient_State__c/Patient_State__c.object-meta.xml
<CustomObject>
    <label>Patient State</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Patient State Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>