Patient_State/main/default/objects/Patient_State__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient State</relationshipLabel>
    <relationshipName>Patient_State</relationshipName>
    <type>Lookup</type>
</CustomField>