Patient_State/main/default/objects/Patient_State__c/fields/Display_Status__c.field-meta.xml
<CustomField>
    <fullName>Display_Status__c</fullName>
    <label>Display Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>