Patient_State/main/default/objects/Patient_State__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <label>Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Sitting</fullName>
            </value>
            <value>
                <fullName>Laying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>