Patient_State/main/default/objects/Patient_State__c/fields/Time_in_Position__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Position__c</fullName>
    <label>Time in Position</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>